# databricks-agentic-app-workshop

./: .gitignore  ADDING_A_SCENARIO.md  CLAUDE.md  README.md
Agentic Apps/retail-customer-service/: CLAUDE.md  lab.yml
Agentic Apps/retail-customer-service/docs/: instructor_guide.md
Agentic Apps/retail-customer-service/reference/agent/: .env.example  AGENTS.md  CLAUDE.md  app.yaml  databricks.yml  pyproject.toml
Agentic Apps/retail-customer-service/reference/agent/agent_server/: agent.py  evaluate_agent.py  prompts.py  start_server.py  utils.py  utils_memory.py
Agentic Apps/retail-customer-service/reference/agent/agent_server/agent_server/: memory_tools.py
Agentic Apps/retail-customer-service/reference/agent/scripts/: discover_tools.py  grant_lakebase_permissions.py  preflight.py  quickstart.py  start_app.py
Agentic Apps/retail-customer-service/reference/scripts/: create_judges.py  generate_traces.py
Agentic Apps/retail-customer-service/setup/: requirements.txt  user_setup.py  workspace_setup.py
Agentic Apps/retail-customer-service/setup/data/: orders.csv  policies.csv  products.csv
agent/: agent.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt
agent/agent_server/: agent.py  utils.py
docs/: go-page-content.md
docs/slides/: ambassador-enablement.html  bu-lead-summary.html  field-card.html  program-status.html
enablement/: instructor_guide.md
orchestration/: user_setup.py  workspace_setup.py
scripts/: generate_traces.py
skills/: agentic-app-best-practices.md  mlflow-agent-evaluation-lifecycle.md
