[project]
name = "cs-agent-workshop"
version = "0.1.0"
description = "TechMart Customer Support Agent — workshop blueprint"

requires-python = ">=3.11"
dependencies = [
    "databricks-langchain[memory]>=0.5.0",
    "databricks-sdk>=0.45.0",
    "langgraph>=0.3.0",
    "mlflow>=3.0.0",
    "uvicorn>=0.34.2",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server"]

[tool.uv]
package = true

[project.scripts]
start-server = "agent_server.start_server:main"
